# promqlpy

./: .bumpversion.cfg  .flake8  .gitignore  README.md  build.py  go.mod  go.sum  libpromql.h  main.go  main.py  pyproject.toml  setup.py
.github/workflows/: release.yaml  release_mac.yaml  test.yml  wheels.yml
go/: go.mod  libpromql.go  libpromql.h
go/promql/: promql.go
promqlpy/: __init__.py  cli.py  split.py
scripts/: get_rules_from_awesome_prometheus_alert_rules.py  stress.py
tests/: gen.py  test_awesome_rules.py  test_split_normal.py
tests/data/: awesome_prometheus_alerts.txt
