[tool.poetry]
name = "promqlpy"
version = "0.1.0"
description = "Python utils for parsing PromQL/MetricsQL."
authors = ["laixintao <laixintaoo@gmail.com>"]
build = "build.py"

[tool.poetry.dependencies]
python = "^3.9"
cffi = "^1.15.1"

[tool.poetry.dev-dependencies]
PyYAML = "^6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
