[tool.poetry]
name = "promqlpy"
version = "1.0.4"
description = "Python utils for parsing PromQL/MetricsQL."
authors = ["laixintao <laixintaoo@gmail.com>"]
build = "build.py"
include = ["go"]

[tool.poetry.dependencies]
python = "^3.9"
cffi = "^1.15.1"
rich = "^12.5.1"

[tool.poetry.dev-dependencies]
PyYAML = "^6.0"
flake8 = "^5.0.1"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.4", "setuptools"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.poetry.scripts]
alert-rule-explain = 'promqlpy.cli:main'
